updated flex shorthand declarations to include overflow hidden to resolve firefox flex bug

--- a/sites/all/themes/accordancesystems/css/accordancesystems.no-query.css
+++ b/sites/all/themes/accordancesystems/css/accordancesystems.no-query.css
@@ -372,7 +372,8 @@
   -webkit-flex: 0 1 50%;
   flex: 0 1 50%;
   padding: 1.5em;
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+  overflow: hidden; }
 
 /* line 1, ../sass/base/_bootstrap_tabs.scss */
 .tab-pane {
@@ -1645,9 +1646,10 @@ hr {
   .page-dealers .view-display-id-dealers_pane .grouped-row .views-row {
     -webkit-flex: 0 1 50%;
     flex: 0 1 50%;
+    overflow: hidden;
     padding: 3em;
     border: 1px solid #FBFCFE; }
-    /* line 23, ../sass/components/pages/_dealers.scss */
+    /* line 24, ../sass/components/pages/_dealers.scss */
     .page-dealers .view-display-id-dealers_pane .grouped-row .views-row:nth-child(4n), .page-dealers .view-display-id-dealers_pane .grouped-row .views-row:first-child {
       background-color: #FBFCFE; }
 
@@ -2074,11 +2076,11 @@ hr {
   .node--araid-controller-display--featured-slide .node__content,
   .node--araid-accessory-display--featured-slide .node__content {
     overflow: hidden; }
-  /* line 41, ../sass/components/view_modes/_node--featured-slide.scss */
+  /* line 42, ../sass/components/view_modes/_node--featured-slide.scss */
   .node--araid-controller-display--featured-slide .field--name-field-product,
   .node--araid-accessory-display--featured-slide .field--name-field-product {
     margin-top: 1em; }
-  /* line 45, ../sass/components/view_modes/_node--featured-slide.scss */
+  /* line 46, ../sass/components/view_modes/_node--featured-slide.scss */
   .node--araid-controller-display--featured-slide select,
   .node--araid-accessory-display--featured-slide select {
     width: 100%;
@@ -2164,7 +2166,7 @@ hr {
       background-color: #fff;
       color: #156DF9; }
 
-/* line 58, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 59, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .content-image {
   -webkit-animation-name: bounceInRight;
   -moz-animation-name: bounceInRight;
@@ -2201,7 +2203,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 62, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 63, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full h2 {
   -webkit-animation-name: fadeInDown;
   -moz-animation-name: fadeInDown;
@@ -2238,7 +2240,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 66, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 67, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-field-slide-tagline {
   -webkit-animation-name: fadeInUp;
   -moz-animation-name: fadeInUp;
@@ -2275,7 +2277,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 70, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 71, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-body {
   -webkit-animation-name: fadeInLeft;
   -moz-animation-name: fadeInLeft;
@@ -2312,7 +2314,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 74, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 75, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item {
   -webkit-animation-name: fadeInLeft;
   -moz-animation-name: fadeInLeft;
@@ -2349,11 +2351,11 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-  /* line 77, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+  /* line 78, ../sass/components/view_modes/_node--homepage-slide--full.scss */
   .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item:nth-child(1) {
     -webkit-animation-delay: 1.5s;
     animation-delay: 1.5s; }
-  /* line 81, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+  /* line 82, ../sass/components/view_modes/_node--homepage-slide--full.scss */
   .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item:nth-child(2) {
     -webkit-animation-delay: 1.8s;
     animation-delay: 1.8s; }
