--- a/sites/all/themes/accordancesystems/css/accordancesystems.styles.css
+++ b/sites/all/themes/accordancesystems/css/accordancesystems.styles.css
@@ -387,7 +387,8 @@
   -webkit-flex: 0 1 50%;
   flex: 0 1 50%;
   padding: 1.5em;
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+  overflow: hidden; }
 
 /* line 1, ../sass/base/_bootstrap_tabs.scss */
 .tab-pane {
@@ -1652,7 +1653,8 @@ hr {
       -webkit-flex: 0 1 33.332%;
       flex: 0 1 33.332%;
       padding: 1.5em;
-      margin-bottom: 1em; } }
+      margin-bottom: 1em;
+      overflow: hidden; } }
 
 /* line 2, ../sass/components/nodes/_node-type-page.scss */
 .node-type-page .l-panel-region {
@@ -1750,9 +1752,10 @@ hr {
   .page-dealers .view-display-id-dealers_pane .grouped-row .views-row {
     -webkit-flex: 0 1 50%;
     flex: 0 1 50%;
+    overflow: hidden;
     padding: 3em;
     border: 1px solid #FBFCFE; }
-    /* line 23, ../sass/components/pages/_dealers.scss */
+    /* line 24, ../sass/components/pages/_dealers.scss */
     .page-dealers .view-display-id-dealers_pane .grouped-row .views-row:nth-child(4n), .page-dealers .view-display-id-dealers_pane .grouped-row .views-row:first-child {
       background-color: #FBFCFE; }
 
@@ -2193,16 +2196,17 @@ hr {
       .node--araid-accessory-display--featured-slide .content-image,
       .node--araid-accessory-display--featured-slide .node__content {
         -webkit-flex: 0 0 50%;
-        flex: 0 0 50%; }
-      /* line 36, ../sass/components/view_modes/_node--featured-slide.scss */
+        flex: 0 0 50%;
+        overflow: hidden; }
+      /* line 37, ../sass/components/view_modes/_node--featured-slide.scss */
       .node--araid-controller-display--featured-slide .content-image,
       .node--araid-accessory-display--featured-slide .content-image {
         padding-left: 4em; } }
-  /* line 41, ../sass/components/view_modes/_node--featured-slide.scss */
+  /* line 42, ../sass/components/view_modes/_node--featured-slide.scss */
   .node--araid-controller-display--featured-slide .field--name-field-product,
   .node--araid-accessory-display--featured-slide .field--name-field-product {
     margin-top: 1em; }
-  /* line 45, ../sass/components/view_modes/_node--featured-slide.scss */
+  /* line 46, ../sass/components/view_modes/_node--featured-slide.scss */
   .node--araid-controller-display--featured-slide select,
   .node--araid-accessory-display--featured-slide select {
     width: 100%;
@@ -2300,12 +2304,13 @@ hr {
     .node--homepage-slide--full .content-image,
     .node--homepage-slide--full .node__content.has-image {
       -webkit-flex: 0 0 50%;
-      flex: 0 0 50%; }
-    /* line 50, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+      flex: 0 0 50%;
+      overflow: hidden; }
+    /* line 51, ../sass/components/view_modes/_node--homepage-slide--full.scss */
     .node--homepage-slide--full .content-image {
       padding-left: 4em; } }
 
-/* line 58, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 59, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .content-image {
   -webkit-animation-name: bounceInRight;
   -moz-animation-name: bounceInRight;
@@ -2342,7 +2347,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 62, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 63, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full h2 {
   -webkit-animation-name: fadeInDown;
   -moz-animation-name: fadeInDown;
@@ -2379,7 +2384,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 66, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 67, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-field-slide-tagline {
   -webkit-animation-name: fadeInUp;
   -moz-animation-name: fadeInUp;
@@ -2416,7 +2421,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 70, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 71, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-body {
   -webkit-animation-name: fadeInLeft;
   -moz-animation-name: fadeInLeft;
@@ -2453,7 +2458,7 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-/* line 74, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+/* line 75, ../sass/components/view_modes/_node--homepage-slide--full.scss */
 .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item {
   -webkit-animation-name: fadeInLeft;
   -moz-animation-name: fadeInLeft;
@@ -2490,11 +2495,11 @@ hr {
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden; }
-  /* line 77, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+  /* line 78, ../sass/components/view_modes/_node--homepage-slide--full.scss */
   .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item:nth-child(1) {
     -webkit-animation-delay: 1.5s;
     animation-delay: 1.5s; }
-  /* line 81, ../sass/components/view_modes/_node--homepage-slide--full.scss */
+  /* line 82, ../sass/components/view_modes/_node--homepage-slide--full.scss */
   .node--homepage-slide--full .field--name-field-slide-call-to-action .field__item:nth-child(2) {
     -webkit-animation-delay: 1.8s;
     animation-delay: 1.8s; }
