--- a/sites/all/themes/accordancesystems/sass/components/nodes/_node-type-article.scss
+++ b/sites/all/themes/accordancesystems/sass/components/nodes/_node-type-article.scss
@@ -15,6 +15,7 @@
           @include flex(0 1 33.332%);
           padding: 1.5em;
           margin-bottom: 1em;
+          overflow: hidden;
         }
       }
     }
