--- a/sites/all/themes/accordancesystems/sass/utilities/_extends.scss
+++ b/sites/all/themes/accordancesystems/sass/utilities/_extends.scss
@@ -30,5 +30,6 @@
     @include flex(0 1 50%);
     padding: 1.5em;
     margin-bottom: 1em;
+    overflow: hidden;
   }
 }
